# iga-transformer

./: APPLY_UPDATE.sh  CITATION.cff  COMPLETE_PIPELINE_README.md  FEVER_FIX_NOTES.md  QUICK_START.md  README.md  README_professional.md  RUNBOOK.md  STATUS.md  pyproject.toml  requirements-mac.txt  requirements_gpu.txt
configs/: ablation_grid.yaml  deepseek_r1_distill_qwen_7b_iga_lowrank_g2_tau035.yaml  llama3_8b_iga.yaml  llama3_8b_iga_lowrank_g2_tau035.yaml  llama3_8b_iga_v3_entropy_sparse.yaml  llama3_8b_iga_v3_risk_sparse.yaml  mistral_7b_iga_lowrank_constant_last4_even.yaml  mistral_7b_iga_lowrank_g2_tau035.yaml  mistral_7b_iga_lowrank_g4_tau020_last4_even.yaml  mistral_7b_iga_lowrank_g4_tau025.yaml  mistral_7b_iga_v3_entropy_sparse.yaml  mistral_7b_iga_v3_hybrid_sparse.yaml  mistral_7b_iga_v3_risk_sparse.yaml  qwen2_5_7b_iga_lowrank_g2_tau035.yaml  qwen2_5_7b_iga_lowrank_g2_tau035_matched_bf16.yaml  qwen2_5_7b_iga_lowrank_g2_tau035_matched_fp32.yaml  tiny_debug.yaml
data/: synthetic.jsonl  synthetic.jsonl.manifest.json
docs/: REPRODUCIBILITY.md  RESULTS_ARTIFACTS.md
results/: fever_loader_check.jsonl  fever_loader_check.jsonl.manifest.json
scripts/: aggregate_qwen_three_seed.sh  audit_prediction_nans.py  bootstrap_iga_lora_qwen.py  bootstrap_two_methods.py  evaluate_base_choice_fixed.py  evaluate_custom_dola_gen.py  evaluate_lora_choice_fixed.py  fix_mistral_matched_baselines_clean.sh  reviewer_risk_checks.py  run_complete_pipeline.sh  run_debug.sh  run_full_mac_m4max.sh  run_generation_baselines.sh  run_latency.sh  run_llama3_iga_seeds_2_3.sh  run_smoke.sh  (+16 more)
(+198 files in other folders)
