[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iga-llm"
version = "0.2.0"
description = "Reviewer-grade uncertainty-gated inhibitory attention pipeline for LLM factual calibration"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
